--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,77 @@
-.App {
-  text-align: center;
+.app {
+  width: 40%;
+  margin: 10vh auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  row-gap: 1vh;
 }
 
-.App-link {
-  color: #61dafb;
+.form label,
+.form button {
+  align-self: flex-start;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form label {
+  font-size: 0.7rem;
+  font-weight: 700;
 }
 
-ul {
+.form input {
+  font-size: 1.2rem;
+  background-color: rgb(242, 237, 237);
+  padding: 5px;
+  border: 2px solid rgb(242, 237, 237);
+  border-bottom: 2px solid rgb(118, 116, 116);
+  -moz-border-radius-topleft: 5px;
+  -webkit-border-top-left-radius: 5px;
+  border-top-left-radius: 5px;
+  -moz-border-radius-topright: 5px;
+  -webkit-border-top-right-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.form input:focus {
+  outline: none;
+  border: 2px solid #93a8c9;
+  border-bottom: 2px solid rgb(118, 116, 116);
+  -webkit-box-shadow: 0px 2px 8px 0px rgba(133, 148, 172, 0.23);
+  -moz-box-shadow: 0px 2px 8px 0px rgba(133, 148, 172, 0.23);
+  box-shadow: 0px 2px 8px 0px rgba(133, 148, 172, 0.23);
+}
+
+.form button {
+  padding: 0.4rem 0.8rem;
+  font-weight: 700;
+  border: 1px solid #ffbe0b;
+  background-color: #ffbe0b;
+  border-radius: 5px;
+}
+
+.form button:hover {
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+.list {
   list-style: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  row-gap: 2vh;
+}
+
+.list li {
+  background-color: rgb(242, 237, 237);
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  -webkit-box-shadow: 0px 2px 8px 0px rgba(133, 148, 172, 0.23);
+  -moz-box-shadow: 0px 2px 8px 0px rgba(133, 148, 172, 0.23);
+  box-shadow: 0px 2px 8px 0px rgba(133, 148, 172, 0.23);
+}
+
+.list li:hover {
+  opacity: 0.8;
 }
